--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,59 +5,58 @@ import { getCollection } from "astro:content";
 import createSlug from "../lib/createSlug"
 
 const posts = (await getCollection("blog")).sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
-
 const last_posts = posts.slice(0, 3);
 ---
 
 <BaseLayout sideBarActiveItemID="home">
   <div class="pb-12 mt-5">
-    <div class="text-xl py-1">Hey there 👋</div>
-    <div class="text-5xl font-bold">I'm Manuel Ernesto</div>
-    <div class="text-3xl py-3 font-bold">Software Engineer and Entrepreneur</div>
-    <div class="py-2">
-      <text class="text-lg">
-        This is <b>Astrofy</b> a free and open-source template for your Personal Portfolio Website built with Astro and TailwindCSS.
-        Create in minutes a website with Blog, CV, Project Section, Store and RSS Feed. I hope you find
-        it useful!
-      </text>
+    <div class="text-xl py-1">Hallo 👋</div>
+    <div class="text-5xl font-bold">Ich bin Qasem Nazari</div>
+
+    <div class="py-2 text-lg">
+      <p>
+        Hier teile ich, was ich lerne, meine Projekte und interessante Inhalte mit euch.
+      </p>
     </div>
+
+    <div class="mt-6">
+      <div class="text-2xl font-bold mb-2">Meine Rollen:</div>
+      <ul class="list-disc list-inside text-lg leading-8">
+        <li>💻 Netzwerkadministrator (SysAdmin)</li>
+        <li>⚽ Fußballspieler </li>
+        <li>🤸‍♂️ Capoeirista</li>
+        <li>☕ Barista (mit Liebe zum Kaffee)</li>
+      </ul>
+    </div>
+
     <div class="mt-8">
-      <a class="btn" href="https://twitter.com/manuelernestog" target="_blank"> Let's connect!</a>
-      <a href="https://github.com/manuelernestog/astrofy" target="_blank" class="btn btn-outline ml-5">
-        Get This template
-      </a>
+      <a class="btn" href="https://t.me/qas" target="_blank">Kontaktiere mich</a>
     </div>
   </div>
 
   <div>
-    <div class="text-3xl w-full font-bold mb-2">My last projects {"</>"}</div>
+    <div class="text-3xl w-full font-bold mb-2">Meine letzten Projekte </div>
   </div>
 
   <HorizontalCard
-    title="Demo Project 1"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="VPN-Server und Netzwerksicherheit"
+    img="/vpn.webp"
+    desc="Einrichtung eines WireGuard-VPN auf Debian zur sicheren Remote-Verbindung. Integriert in bestehendes Backup-System."
     url="#"
-    badge="NEW"
+    badge="Neu"
   />
   <div class="divider my-0"></div>
+
   <HorizontalCard
-    title="Demo Project 2"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="Testumgebung für Netzwerkautomatisierung"
+    img="/2.webp"
+    desc="Virtuelle Testumgebung zur Entwicklung und Prüfung von Firewall-Regeln und Admin-Skripten."
     url="#"
   />
   <div class="divider my-0"></div>
-  <HorizontalCard
-    title="Demo Project 3"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
-    badge="FOSS"
-  />
 
   <div>
-    <div class="text-3xl w-full font-bold mb-5 mt-10">Latest from blog</div>
+    <div class="text-3xl w-full font-bold mb-5 mt-10">Neueste Blog-Beiträge</div>
   </div>
 
   {
