--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,12 +4,9 @@ const today = new Date();
 
 <footer class="footer footer-center block mb-5 pt-10">
   <div class="pb-2">
-    &copy; {today.getFullYear()} Manuel Ernesto
+    &copy; {today.getFullYear()} Qasem Nazari
   </div>
   <div class="inline opacity-75">
-    Developed by <a href="https://manuelernestog.github.io" target="_blank" class="font-bold">Manuel Ernesto</a> using
-    <!-- Thanks for using this template. You can keep this line to support my work :) -->
-    <a href="https://astrofy-template.netlify.app/" target="_blank" class="font-bold">Astrofy Template ⚡️</a>
+    Erstellt mit ❤️ und <a href="https://astro.build" target="_blank" class="font-bold">Astro</a>
   </div>
 </footer>
-<style></style>
