--- a/src/components/SideBarFooter.astro
+++ b/src/components/SideBarFooter.astro
@@ -5,7 +5,7 @@
 
 <div class="social-icons px-4 pb-5 pt-1 flex self-center justify-center sticky bottom-0 bg-base-200">
     <a
-        href="https://manuelernestog.github.io/support-my-work/"
+        href="https:///"
         target="_blank"
         class="mx-3"
         aria-label="Support my work"
@@ -24,7 +24,7 @@
             ></path></svg
         >
     </a>
-    <a href="https://github.com/manuelernestog" target="_blank" class="mx-3" aria-label="Github" title="Github">
+    <a href="https://github.com/" target="_blank" class="mx-3" aria-label="Github" title="Github">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -38,7 +38,7 @@
             ></path>
         </svg>
     </a>
-    <a href="https://twitter.com/manuelernestog" target="_blank" class="mx-3" aria-label="Twitter" title="Twitter">
+    <a href="https://twitter.com/" target="_blank" class="mx-3" aria-label="Twitter" title="Twitter">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -51,7 +51,7 @@
         </svg>
     </a>
     <a
-        href="https://www.linkedin.com/in/manuelernestogr"
+        href="https://www.linkedin.com/in/qasem-nazari-414a12346/"
         target="_blank"
         class="mx-3"
         aria-label="Linkedin"
@@ -71,7 +71,7 @@
 
     <a href="/rss.xml" target="_blank" class="mx-3" aria-label="RSS Feed" title="RSS Feed">
         <svg
-            xmlns="http://www.w3.org/2000/svg"
+            xmlns=""
             width="24"
             height="24"
             viewBox="0 0 24 24"
