--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -3,90 +3,84 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import TimeLineElement from "../components/cv/TimeLine.astro";
 ---
 
-<BaseLayout title="Resume" sideBarActiveItemID="cv">
+<BaseLayout title="Lebenslauf" sideBarActiveItemID="cv">
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Profile</div>
+    <div class="text-3xl w-full font-bold">Profil</div>
   </div>
 
   <div class="mb-10 text-justify">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    Ich bin ein engagierter IT-Fachmann mit praktischer Erfahrung in der Netzwerktechnik, Serveradministration und Systemintegration. Besonders interessiert mich die Arbeit mit Linux-Systemen, Firewalls und der Einrichtung sicherer IT-Infrastrukturen.
   </div>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Education</div>
+    <div class="text-3xl w-full font-bold">Ausbildung</div>
   </div>
 
   <div class="time-line-container grid gap-4 mb-10">
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="Fachinformatiker für Systemintegration (i. A.)"
+      subtitle="2020 – 2024 | Ausbildung in München"
     />
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="Mittlere Reife"
+      subtitle="2020 | Deutschland"
+    />
+    <TimeLineElement
+      title="Grundschule & Schulbildung"
+      subtitle="bis 2013 | Afghanistan & Deutschland"
     />
   </div>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Experience</div>
+    <div class="text-3xl w-full font-bold">Berufserfahrung</div>
   </div>
 
   <div class="time-line-container mb-10">
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="IT-Support & Netzwerkverwaltung"
+      subtitle="seit 2023 | Externer IT-Support für mittelständisches Unternehmen"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      Betreuung der Serverumgebung, Unterstützung bei Netzwerkfragen, Einrichtung von VPN und Firewall-Systemen.
     </TimeLineElement>
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Projektarbeit in der Ausbildung"
+      subtitle="2022 – 2024"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
-    </TimeLineElement>
-    <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
-    >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      Praktische Umsetzung von IT-Projekten: z. B. Einrichtung eines VPN-Servers auf Debian, Automatisierung von Backup-Strategien, Support-Helpdesk.
     </TimeLineElement>
   </div>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Certifications</div>
+    <div class="text-3xl w-full font-bold">Sprachen</div>
   </div>
 
-  <ul class="list-disc mx-6 mb-10 grid gap-2">
-    <li>
-      <a href="#" target="_blank"> Certification Name (with link)</a>
-    </li>
-    <li>
-      <a href="#" target="_blank"> Certification Name (with link)</a>
-    </li>
+  <ul class="list-disc mx-6 mb-10">
+    <li>Deutsch – C1</li>
+    <li>Persisch (Muttersprache)</li>
+    <li>Englisch – gute Kenntnisse</li>
   </ul>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Skills</div>
+    <div class="text-3xl w-full font-bold">Kenntnisse & Technologien</div>
   </div>
 
-  <ul class="list-disc md:columns-5 columns-2 mx-6">
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
+  <ul class="list-disc md:columns-3 columns-1 mx-6 mb-10">
+    <li>Windows & Linux</li>
+    <li>WireGuard VPN</li>
+    <li>pfSense / UFW</li>
+    <li>Veeam Backup</li>
+    <li>Active Directory</li>
+    <li>Hyper-V / VirtualBox</li>
+    <li>Bash-Scripting</li>
+    <li>Netzwerkanalyse</li>
+    <li>IT-Support</li>
   </ul>
+
+  <div class="mb-5">
+    <div class="text-3xl w-full font-bold">Kontakt</div>
+  </div>
+
+  <ul class="list-disc mx-6 mb-10">
+    <li>E-Mail: <a href="mailto:nazari.qasem@posteo.com">nazari.qasem@posteo.com</a></li>
+    <li>LinkedIn / Telegram / Xing
 </BaseLayout>
