--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -3,38 +3,43 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import HorizontalCard from "../components/HorizontalCard.astro";
 ---
 
-<BaseLayout title="Projects" sideBarActiveItemID="services">
+<BaseLayout title="Services" sideBarActiveItemID="services">
   <div>
-    <div class="text-3xl w-full font-bold mb-5">Services Header</div>
+    <div class="text-3xl w-full font-bold mb-5">Was ich anbiete</div>
   </div>
 
   <HorizontalCard
-    title="Service 1"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    badge="NEW"
+    title="IT-Support & Netzwerke"
+    img="/it.webp"
+    desc="Unterstützung bei Netzwerkinfrastruktur, Einrichtung von Servern (z. B. VPN), Fehleranalyse und Dokumentation."
+    badge="IT"
     url="#"
   />
   <div class="divider my-0"></div>
+
   <HorizontalCard
-    title="Service 2"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="Barista & Kaffeeberatung"
+    img="/barista.webp"
+    desc="Erfahrung als Barista – Kaffeezubereitung mit Siebträgermaschine sowie Beratung zur Ausstattung kleiner Cafés."
+    badge="Café"
     url="#"
   />
   <div class="divider my-0"></div>
+
   <HorizontalCard
-    title="Service 3"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="Sport & Bewegung"
+    img="/sport.webp"
+    desc="Aktives Engagement in Capoeira, Fitness und Bewegungstraining – gern auch gemeinsam mit anderen."
+    badge="Fitness"
     url="#"
-    badge="NEW"
   />
   <div class="divider my-0"></div>
+
   <HorizontalCard
-    title="Service 4"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="Deutsch lernen für Persischsprachige"
+    img="/sprache.webp"
+    desc="Ich helfe Afghan:innen und Iraner:innen dabei, die deutsche Sprache besser zu verstehen – mit praxisnahen Erklärungen und Vokabeln für den Alltag."
+    badge="🇩🇪"
     url="#"
   />
 </BaseLayout>
